<resources>
    <!-- Common Area -->
    <string name="app_name">Ecommerce</string>
    <string name="try_again_message">Ocorreu um erro, por favor tente novamente!</string>
    <string name="add_product_to_cart_message">Produto adicionado ao carrinho!</string>
    <string name="name_field_hint">Nome</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Senha</string>
    <!-- End Area-->

    <!-- Login Screen Area -->
    <string name="login_create_account_button_text">Crie sua conta aqui</string>
    <string name="login_login_button_text">Login</string>
    <!-- End Area-->

    <!-- Create Home Screen Area -->
    <string name="home_screen_not_found_products_message">Ocorreu um erro ao carregar os produtos.</string>
    <!-- End Area-->

    <!-- Create Account Screen Area -->
    <string name="create_account_success_message">Registrado com sucesso!</string>
    <string name="create_account_button_text">Criar Conta</string>
    <!-- End Area-->

    <!-- Create Category Screen Area -->
    <string name="category_screen_not_found_product_message">Nenhum produto encontrado para esta categoria.</string>
    <!-- End Area-->
</resources>